# cookie_cutter_repo

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  pyproject.toml  requirements_dev.txt  requirements_tests.txt  tasks.py
.dvc/: config
.github/workflows/: cml_data.yaml  pre-commit-config.yaml  pre-commit.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile  wandb.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pt
src/: data.py  evaluate.py  model.py  test_path.py  train.py  visualize.py
src/cookie_cutter_repo/: data.py  evaluate.py  model.py  train.py
src/cookie_cutter_repo/wandb/: latest-run
src/cookie_cutter_repo/wandb/run-20250109_124405-bzwxkw09/: run-bzwxkw09.wandb
src/cookie_cutter_repo/wandb/run-20250109_124441-eessmlb7/: run-eessmlb7.wandb
src/wandb/: latest-run
src/wandb/run-20250113_114102-vzq2t46s/: run-vzq2t46s.wandb
src/wandb/run-20250113_114102-vzq2t46s/files/: config.yaml  (+2 more)
src/wandb/run-20250113_115059-hixkz36q/: run-hixkz36q.wandb
tests/: __init__.py  test_data.py  test_shit.py
wandb/: latest-run
wandb/run-20250115_154659-jx882n3x/: run-jx882n3x.wandb
wandb/run-20250115_154659-jx882n3x/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250115_155607-6nt16n1y/: run-6nt16n1y.wandb
wandb/run-20250115_155607-6nt16n1y/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250115_155829-u6985flo/: run-u6985flo.wandb
wandb/run-20250115_155829-u6985flo/files/: requirements.txt  wandb-metadata.json  wandb-summary.json
(+25 files in other folders)
